feat: R tag tring

--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
 <pre class="text-output" id="rpy-output">&nbsp;</pre>
 </div>
 
+<a href="https://github.com/hrbrmstr/slightly-more-than-minimal/tree/batman">Get it on GitHub</a>.
+
 </body>
 </html>
