chore: done for the night

--- a/index.html
+++ b/index.html
@@ -32,7 +32,17 @@
 <pre class="text-output" id="rpy-output">&nbsp;</pre>
 </div>
 
-<a href="https://github.com/hrbrmstr/slightly-more-than-minimal/tree/batman">Get it on GitHub</a>.
+I added also a <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals#tagged_templates">Tag Function</a> so you can do:
+
+<pre class="text-output">
+await R`sample(100, 5)`
+</pre>
+
+<p>and it'll "<code>evalR</code>" and "<code>toJs</code>" the code between the template string.</p>
+
+<p>Copy that to the clipboard, open DevTools and try it!</p>
+
+<p><a href="https://github.com/hrbrmstr/slightly-more-than-minimal/tree/batman">Get it on GitHub</a>.</p>
 
 </body>
 </html>
